--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2bbeb6</color>
-    <color name="colorPrimaryDark">#2bbeb6</color>
+    <color name="colorPrimary">#FF618E</color>
+    <color name="colorPrimaryDark">#FF618E</color>
     <color name="colorAccent">#FF4081</color>
 </resources>
